# MakiEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Asset/: data.txt
Asset/Scene/: hutao.ogex  paimon-and-objects-1.ogex  paimon-and-objects.ogex  paimon.ogex  suzanne.ogex  test.ogex  test1.ogex
Asset/Shaders/: basic.ps  basic.vs
Empty/: EmptyApplication.cpp
Framework/Common/: Allocator.cpp  Allocator.hpp  AssetLoader.cpp  AssetLoader.hpp  BaseApplication.cpp  BaseApplication.hpp  Buffer.hpp  CMakeLists.txt  GfxConfiguration.h  GraphicsManager.cpp  GraphicsManager.hpp  Image.cpp  Image.hpp  MemoryManager.cpp  MemoryManager.hpp  Mesh.h  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  SceneNode.hpp  SceneObject.cpp  SceneObject.hpp  SceneParser.cpp  cbuffer.h  main.cpp  portable.h  shader_base.h  utility.hpp
Framework/Common/test/: CMakeLists.txt  test_asset_loader.cpp  test_asset_loader_scene.cpp  test_gex_parser.cpp
Framework/GeomMath/: CMakeLists.txt  GeomMath.h
Framework/GeomMath/include/: AddByElement.h  CrossProduct.h  DotProduct.h  ExchangeYAndZ.h  InverseMatrix4x4f.h  MulByElement.h  Normalize.h  SubByElement.h  Transform.h  Transpose.h
Framework/GeomMath/ispc/: CMakeLists.txt  DotProduct.ispc  ExchangeYAndZ.ispc  SubByElement.ispc  Transform.ispc  Transpose.ispc
Framework/GeomMath/test/: CMakeLists.txt  test.cpp  test_matrix.cpp  test_vector.cpp
Framework/Interface/: IApplication.hpp  IRuntimeModule.hpp  ImageParser.hpp  SceneParser.hpp
Framework/Parser/: BMP.hpp  OGEX.hpp
Noob/: CMakeLists.txt  endian.cpp  struct_size.cpp
Platform/: CMakeLists.txt
Platform/Darwin/: CMakeLists.txt  CocoaApplication.h  CocoaApplication.mm  CocoaApplicationConfig.cpp  CocoaOpenGLApplicationConfig.cpp  GLView.h  GLView.mm  OpenGLApplication.cpp  OpenGLApplication.hpp  hello_opengl.cpp  hello_xcb.cpp
Platform/Darwin/cocoa/: CMakeLists.txt  CocoaApplication.mm  CocoaApplicationConfig.cpp  CocoaOpenGLApplication.h  CocoaOpenGLApplication.mm  CocoaOpenGLApplicationConfig.cpp  GLView.h  GLView.mm
Platform/Darwin/hello_x/: CMakeLists.txt  hello_opengl.cpp
Platform/Darwin/x11/: CMakeLists.txt  OpenGLApplication.cpp  XcbApplication.cpp  XcbApplication.hpp
Platform/Empty/: CMakeLists.txt  EmptyApplication.cpp
Platform/Empty/test/: CMakeLists.txt  test_empty_application.cpp
RHI/: CMakeLists.txt
RHI/OpenGL/: CMakeLists.txt  OpenGLGraphicsManager.cpp  OpenGLGraphicsManager.hpp
Test/: CMakeLists.txt  test_geommath.cpp  test_gex.cpp  test_hello.cpp  test_xg.cpp
cmake/: GUIDPlatformDependencies.cmake
docs/: notes.md
